fix: 반려견 전체조회 컴포넌트 분리 및 더미데이터 제거하고 api 연결

--- a/src/assets/css/StatusButton.module.css
+++ b/src/assets/css/StatusButton.module.css
@@ -56,3 +56,28 @@
   background-color: #F8D8D8;
   color: #E05A55;
 }
+
+.customStatusPending {
+  background-color: #DDDDDD;
+  color: #303030;
+}
+
+.customStatusInprogress {
+  background-color: #CAD7FF;
+  color: #5356FF;
+}
+
+.customStatusHold {
+  background-color: #FFF292;
+  color: #9E841E;
+}
+
+.customStatusCompleted {
+  background-color: #B9F9BC;
+  color: #289258;
+}
+
+.customStatusCanceled {
+  background-color: #F8D8D8;
+  color: #E05A55;
+}
